# ai_cli_meal_project

./: .gitignore  CMakeLists.txt  conandata.yml  env_reader.c  env_reader.h  main.c
